[workspace]
members = [
    "helloworld",
    "primitives",
    "custom-types",
    "variable-bindings",
    "types",
    "conversion",
    "expressions",
    "flow-of-control",
    "functions",
    "modules",
    "cargo/foo",
    "cargo/bar",
    "attributes",
    "generics",
    "scoping-rules",
    "traits",
    "macro-rules",
]
default-members = [
    "helloworld",
    "primitives",
    "custom-types",
    "variable-bindings",
    "types",
    "conversion",
    "expressions",
    "flow-of-control",
    "functions",
    "modules",
    "cargo/foo",
    "cargo/bar",
    "attributes",
    "generics",
    "scoping-rules",
    "traits",
    "macro-rules",
]
resolver = "2"
