[workspace]
members = [
    "helloworld",
    "primitives",
    "custom-types",
    "variable-bindings",
    "types",
    "conversion",
    "expressions",
    "flow-of-control",
    "functions",
    "modules",
    "cargo/foo",
    "cargo/bar",
    "attributes",
    "generics",
    "scoping-rules",
    "traits",
    "macro-rules",
    "error-handling",
]
default-members = [
    "helloworld",
    "primitives",
    "custom-types",
    "variable-bindings",
    "types",
    "conversion",
    "expressions",
    "flow-of-control",
    "functions",
    "modules",
    "cargo/foo",
    "cargo/bar",
    "attributes",
    "generics",
    "scoping-rules",
    "traits",
    "macro-rules",
    "error-handling",
]
resolver = "2"
